# ipypandas

./: .coveragerc  .eslintignore  .eslintrc.js  .gitignore  .npmignore  .prettierrc  .yarnrc.yml  LICENSE  MANIFEST.in  README.md  babel.config.js  codecov.yml  install.json  ipypandas.json  jest.config.js  package.json  pyproject.toml  pytest.ini  readthedocs.yml  setup.py  tsconfig.json  webpack.config.js
.github/workflows/: build.yml  release.yml
css/: widget.css
docs/: Makefile  environment.yml  make.bat  makefile  pytest.ini
docs/source/: conf.py  dev-install.rst  develop-install.rst  index.rst  install.rst  introduction.rst
docs/source/_static/: theme.css
docs/source/development/: development.rst
docs/source/examples/: examples.rst  index.rst  style.nblink  usage.nblink
docs/source/installation/: installation.rst
docs/source/static/styles/: theme.css
examples/: installation.ipynb  introduction.ipynb  style.ipynb  usage.ipynb
ipypandas/: __init__.py  _version.py  version.py  widget.py
ipypandas/nbextension/: extension.js
ipypandas/tests/: __init__.py  mock.py  test_communication.py  test_extension.py  test_widget.py
src/: extension.ts  index.ts  plugin.ts  utils.ts  version.ts  widget.ts
src/labextension/: index.ts
src/nbextension/: extension.js  index.ts  ipypandas.json
src/styles/: index.less
src/tests/: jest.setup.js  setup.js  test_model.ts  test_view.ts  utils.ts
