[build-system]
build-backend = "hatchling.build"
requires = ["hatchling>=1.21.1", "hatch-nodejs-version>=0.3.2", "jupyterlab>=4.0.0"]

[project]
name = "ipypandas"
version = "0.1.2"
description = "Interactive JupyterLab features for the python data analysis library pandas."
readme = "README.md"
license = { file = "LICENSE" }
authors = [{ name = "Tensorware" }]
keywords = ["IPython", "Jupyter", "Widgets"]
classifiers = [
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "Framework :: Jupyter :: JupyterLab",
    "Framework :: Jupyter :: JupyterLab :: Extensions",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "License :: OSI Approved :: BSD License",
]
requires-python = ">=3.8"
dependencies = ["ipywidgets>=8.0.0", "pandas>=2.0.0"]

[project.urls]
Homepage = "https://github.com/tensorware/ipypandas"

[project.optional-dependencies]
docs = [
    "sphinx>=5.0.0",
    "nbsphinx>=0.8.10",
    "nbsphinx-link>=1.3.0",
    "jupyter_sphinx>=0.4.0",
    "pytest_check_links>=0.7.0",
    "pydata-sphinx-theme>=0.8.0",
    "pypandoc>=1.7.5",
]
tests = ["hatch>=1.9.3", "nbval>=0.9.5", "pytest>=7.0.0"]
examples = ["ipywidgets>=8.0.0", "pandas>=2.0.0"]

[tool.hatch.build]
artifacts = ["ipypandas/labextension"]

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel.shared-data]
"ipypandas/labextension" = "share/jupyter/labextensions/ipypandas"
"./install.json" = "share/jupyter/labextensions/ipypandas/install.json"

[tool.hatch.build.targets.sdist]
exclude = [".git", ".github", ".vscode"]

[tool.hatch.build.hooks.jupyter-builder]
build-function = "hatch_jupyter_builder.npm_builder"
ensured-targets = ["ipypandas/labextension/package.json"]
skip-if-exists = ["ipypandas/labextension/package.json"]
dependencies = ["hatch-jupyter-builder>=0.8.3"]

[tool.hatch.build.hooks.jupyter-builder.build-kwargs]
path = "."
npm = ["jlpm"]
build_cmd = "build"

[tool.tbump]
field = [{ name = "channel", default = "" }, { name = "release", default = "" }]
file = [
    { src = "pyproject.toml", version_template = "version = \"{major}.{minor}.{patch}{channel}{release}\"" },
    { src = "package.json", version_template = "\"version\": \"{major}.{minor}.{patch}{channel}{release}\"" },
    { src = "ipypandas/version.py", version_template = "__version__ = '{major}.{minor}.{patch}{channel}{release}'" },
]

[tool.tbump.version]
current = "0.1.2"
regex = "(?P<major>\\d+)\\.(?P<minor>\\d+)\\.(?P<patch>\\d+)((?P<channel>a|b|rc|dev)(?P<release>\\d+))?"

[tool.tbump.git]
tag_template = "v{new_version}"
message_template = "build: bump to v{new_version}"
